modified labels to block elements by adding parent divs to them

--- a/index.html
+++ b/index.html
@@ -15,21 +15,27 @@
                 </div>
                 <div class="form-elements">
                     <div class="labels">
+                       <div class="name">
                         <label for="name">
                             Your Name
                         </label>
+                       </div>
                         <input type="text" id="name" placeholder="Enter your name">
                     </div>
                     <div class="labels">
-                        <label for="email">
-                            Email
-                        </label>
+                        <div class="email">
+                            <label for="email">
+                                Email
+                            </label>
+                        </div>
                         <input type="text" id="email" placeholder="Enter your email address">
                     </div>
                     <div class="labels">
-                        <label for="services">
-                            Needed Services
-                        </label>
+                        <div class="services">
+                            <label for="services">
+                                Needed Services
+                            </label>
+                        </div>
                         <select name="services" id="services">
                             <option value="choose" selected id="option">Choose Services</option>
                             <option value="business" id="option">Business</option>
@@ -37,9 +43,11 @@
                         </select>
                     </div>
                     <div class="labels">
-                        <label for="services">
-                            Budget
-                        </label>
+                        <div class="budget">
+                            <label for="services">
+                                Budget
+                            </label>
+                        </div>
                         <select name="budget" id="budget">
                             <option value="choose" selected id="option">Select Budget</option>
                             <option value="business" id="option">100k - 1M</option>
@@ -47,9 +55,11 @@
                         </select>
                     </div>
                     <div class="labels">
-                        <label for="message">
-                            Message
-                        </label>
+                        <div class="message">
+                            <label for="message">
+                                Message
+                            </label>
+                        </div>
                         <textarea name="message" id="message" placeholder="Enter your message here"></textarea>
                     </div>
                 </div>
